<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <RelativeLayout
        android:id="@id/Llslider"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@id/layoutTop"
        android:orientation="vertical">
        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v4.view.ViewPager>
        <android.support.design.widget.TabLayout
            android:id="@+id/tabDots"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/tab_selector"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp"
            android:elevation="@dimen/five_dp"/>
    </RelativeLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/firstnameWrapper"
            android:layout_margin="@dimen/ten_dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/email"
                android:textColor="@color/colorblack"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/login_data" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/continuesl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            android:background="@color/colorPrimary"
            android:text="@string/continues"
            android:textColor="@color/colorwhite"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.50"
            android:weightSum="1"
            android:orientation="horizontal"
            android:gravity="center|bottom">
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"/>
            <ImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_gravity="right|center"
                android:layout_weight="0.10"
                app:srcCompat="@drawable/ic_facebook"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.50"
                android:layout_marginLeft="@dimen/five_dp"
                android:gravity="left|center"
                android:text="@string/fb"
                android:textColor="@color/colorblack" />
        </LinearLayout>
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorblack"
            android:layout_margin="@dimen/ten_dp"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="0.50"
            android:weightSum="1"
            android:orientation="horizontal"
            android:gravity="center|bottom">
            <View
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.30"/>
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_gravity="right|center"
                android:layout_weight="0.10"
                android:src="@drawable/ic_google"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.60"
                android:layout_marginLeft="@dimen/five_dp"
                android:gravity="left|center"
                android:text="@string/google"
                android:textColor="@color/colorblack" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
