<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:id="@+id/mainprogress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="@dimen/five_dp"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />
    <LinearLayout
        android:id="@+id/rel_extra_header"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center|start"
        android:visibility="visible"
        android:background="@color/colorPrimary"
        android:weightSum="1"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/Ivback"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="@dimen/ten_dp"
            app:srcCompat="@drawable/ic_arrow_back"
            android:visibility="visible" />
        <TextView
            android:id="@+id/left_icon"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="Login"
            android:layout_marginLeft="5dp"
            android:textColor="@color/colorwhite"
            android:textSize="20dp"
            android:visibility="visible" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/fifty_dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/firstnameWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:hint="Email or Mobile"
            android:layout_marginTop="@dimen/ten_dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColor="@color/colorblack" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_wrapper"
            android:layout_marginTop="@dimen/five_dp"
            android:hint="Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten_dp"
            android:layout_marginRight="@dimen/ten_dp"
            android:visibility="visible">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@color/colorblack" />
        </android.support.design.widget.TextInputLayout>
        <CheckBox
            android:id="@+id/Chk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/ten_dp"
            android:text="@string/loginwithpass"
            android:visibility="gone" />

        <Button
            android:id="@+id/continuesl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            android:background="@color/colorPrimary"
            android:text="@string/continues"
            android:textColor="@color/colorwhite"
            android:visibility="gone" />

        <Button
            android:id="@+id/Btnlogins"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@color/colorwhite"
            android:visibility="visible" />

        <Button
            android:id="@+id/Btnsendotp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/ten_dp"
            android:background="@color/colorPrimary"
            android:text="@string/sendotp"
            android:textColor="@color/colorwhite"
            android:visibility="gone" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorblack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.50"
                android:gravity="center|bottom"
                android:orientation="horizontal"
                android:weightSum="1">

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right|center"
                    android:layout_weight="0.10"
                    app:srcCompat="@drawable/ic_facebook" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:layout_weight="0.50"
                    android:gravity="left|center"
                    android:text="@string/fb"
                    android:textColor="@color/colorblack" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorblack" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.50"
                android:gravity="center|bottom"
                android:orientation="horizontal"
                android:weightSum="1">

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.30" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right|center"
                    android:layout_weight="0.10"
                    android:src="@drawable/ic_google" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:layout_weight="0.60"
                    android:gravity="left|center"
                    android:text="@string/google"
                    android:textColor="@color/colorblack" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
