<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorgraylight"/>
    <LinearLayout
        android:id="@+id/Llitems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|start"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/Ivimg"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:adjustViewBounds="true"
            android:padding="@dimen/five_dp"
            android:scaleType="fitCenter" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/two_dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Tvdescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:singleLine="true"
                android:textColor="@color/colorblack"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/Tvaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|start"
                android:orientation="horizontal"
                android:weightSum="1">

                <TextView
                    android:id="@+id/Tvprice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/Tvcondition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:textColor="@color/colorlimegreen"
                    android:textSize="16sp" />


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center|start">
                <Button
                    android:id="@+id/Btbut_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/button_border"
                    android:text="@string/edit"
                    android:visibility="gone"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />
                <Button
                    android:id="@+id/Btbut_delete"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/button_border"
                    android:text="@string/delet"
                    android:visibility="gone"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />
                <Button
                    android:id="@+id/Btbut_now"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@drawable/button_border"
                    android:text="@string/but_now"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>