<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ProgressBar
        android:id="@+id/mainprogress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="@dimen/five_dp"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:visibility="gone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@id/Llslider"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_below="@id/layoutTop"
                android:orientation="vertical">

                <android.support.design.widget.CollapsingToolbarLayout
                    android:id="@+id/collapsing_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fitsSystemWindows="true"
                    app:contentScrim="?attr/colorPrimary"
                    app:expandedTitleMarginBottom="20dp"
                    app:expandedTitleMarginEnd="64dp"
                    app:expandedTitleMarginStart="48dp"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed">

                    <android.support.v4.view.ViewPager
                        android:id="@+id/pager"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"></android.support.v4.view.ViewPager>
                </android.support.design.widget.CollapsingToolbarLayout>

                <android.support.design.widget.TabLayout
                    android:id="@+id/tabDots"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/ten_dp"
                    android:elevation="@dimen/five_dp"
                    app:tabBackground="@drawable/tab_selector"
                    app:tabGravity="center"
                    app:tabIndicatorHeight="0dp" />
            </RelativeLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/firstnameWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ten_dp"
                android:layout_marginRight="@dimen/ten_dp"
                android:hint="Enter Email/Mobile"
                android:textColorHint="@color/colorblack"
                android:layout_marginTop="@dimen/ten_dp">
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    style="@style/InputDialogText"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ten_dp"
                android:layout_marginRight="@dimen/ten_dp"
                android:visibility="gone">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:textColor="@color/colorblack" />
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:id="@+id/Chk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/ten_dp"
                android:text="@string/loginwithpass"
                android:visibility="gone" />

            <Button
                android:id="@+id/continuesl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten_dp"
                android:background="@color/colorPrimary"
                android:text="@string/continues"
                android:textColor="@color/colorwhite" />

            <Button
                android:id="@+id/Btnlogins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten_dp"
                android:background="@color/colorPrimary"
                android:text="@string/login"
                android:textColor="@color/colorwhite"
                android:visibility="gone" />

            <Button
                android:id="@+id/Btnsendotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/ten_dp"
                android:background="@color/colorPrimary"
                android:text="@string/continues"
                android:textColor="@color/colorwhite"
                android:visibility="gone" />
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorblack" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.50"
                android:gravity="center|bottom"
                android:orientation="horizontal"
                android:weightSum="1">

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.40" />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right|center"
                    android:layout_weight="0.10"
                    app:srcCompat="@drawable/ic_facebook" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:layout_weight="0.50"
                    android:gravity="left|center"
                    android:text="@string/fb"
                    android:textColor="@color/colorblack" />
            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/colorblack" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.50"
                android:gravity="center|bottom"
                android:orientation="horizontal"
                android:weightSum="1">

                <View
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.30" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="0dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right|center"
                    android:layout_weight="0.10"
                    android:src="@drawable/ic_google" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="@dimen/five_dp"
                    android:layout_weight="0.60"
                    android:gravity="left|center"
                    android:text="@string/google"
                    android:textColor="@color/colorblack" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
